Fixes for the top bar changing size and logo jumping position on small sized UI.

--- a/gigaviewer-ui/src/components/top-navbar/style.css
+++ b/gigaviewer-ui/src/components/top-navbar/style.css
@@ -1,7 +1,7 @@
 /* GENERAL NAVBAR STYLING */
 .navbar-items {
   background: linear-gradient(90deg, #37474f 0%, #78909c 100%);
-  height: 8vh;
+  height: 3.5em;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -150,13 +150,6 @@
   .nav-link:hover {
     background-color: #546e7a;
     border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
   }
 
   .menu-icon {
